Rework Gomoku UI

--- a/GomokuWindow.ui
+++ b/GomokuWindow.ui
@@ -11,11 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Gomoku</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+    <item row="2" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
        <number>0</number>
@@ -77,7 +77,7 @@
             <property name="sizeConstraint">
              <enum>QLayout::SetNoConstraint</enum>
             </property>
-            <item row="3" column="0">
+            <item row="2" column="0">
              <widget class="QPushButton" name="exitButton">
               <property name="text">
                <string>Exit</string>
@@ -110,13 +110,6 @@
               </property>
              </widget>
             </item>
-            <item row="2" column="0">
-             <widget class="QPushButton" name="settingsButton">
-              <property name="text">
-               <string>Settings</string>
-              </property>
-             </widget>
-            </item>
            </layout>
           </item>
           <item>
@@ -136,48 +129,80 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="settings">
-       <layout class="QGridLayout" name="gridLayout_5">
-        <item row="1" column="1">
-         <layout class="QVBoxLayout" name="verticalLayout_5">
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_2">
-            <item>
-             <widget class="QLabel" name="gameMode">
-              <property name="text">
-               <string>Game mode</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QComboBox" name="comboBox">
-              <item>
-               <property name="text">
-                <string>Classique</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>Le Cinq Cassable</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>Le double trois</string>
-               </property>
-              </item>
-             </widget>
-            </item>
-           </layout>
+      <widget class="QWidget" name="gameForm">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <layout class="QGridLayout" name="gridLayout_5" columnstretch="0,0">
+          <property name="rightMargin">
+           <number>127</number>
+          </property>
+          <property name="bottomMargin">
+           <number>20</number>
+          </property>
+          <property name="horizontalSpacing">
+           <number>12</number>
+          </property>
+          <property name="verticalSpacing">
+           <number>0</number>
+          </property>
+          <item row="3" column="0">
+           <widget class="QLabel" name="cinqCassableLabel">
+            <property name="text">
+             <string>Cinq Cassable</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QLineEdit" name="playerOneNameLineEdit"/>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="playerTwoNameLabel">
+            <property name="text">
+             <string>Player Two Name</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QCheckBox" name="cinqCassableCheckBox"/>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="playerTwoNameLineEdit"/>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="playerOneNameLabel">
+            <property name="text">
+             <string>Player One Name</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QCheckBox" name="leDoubleTroisCheckBox"/>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="leDoubleTroisLabel">
+            <property name="text">
+             <string>Le Double Trois</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1">
+           <widget class="QPushButton" name="startButton">
+            <property name="layoutDirection">
+             <enum>Qt::LeftToRight</enum>
+            </property>
+            <property name="text">
+             <string>Start</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QPushButton" name="backtoMenu">
+            <property name="text">
+             <string>Back to the menu</string>
+            </property>
+           </widget>
           </item>
          </layout>
-        </item>
-        <item row="2" column="1">
-         <widget class="QPushButton" name="backToMenuButton">
-          <property name="text">
-           <string>backToMenu</string>
-          </property>
-         </widget>
         </item>
        </layout>
       </widget>
@@ -206,7 +231,7 @@
      <x>0</x>
      <y>0</y>
      <width>552</width>
-     <height>26</height>
+     <height>19</height>
     </rect>
    </property>
    <property name="nativeMenuBar">
